# primer-cli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  environment.yml  requirements.txt
app/primer_cli/: README.md  pyproject.toml
app/primer_cli/primer_cli/: __main__.py
app/primer_cli/primer_cli/cli/: app.py  pretty_screen.py
app/primer_cli/primer_cli/cli/commands/: align.py  conserved.py  fetch.py  pipeline.py
app/primer_cli/primer_cli/core/: __init__.py  config.py  exceptions.py  logging.py  models.py  validation.py
app/primer_cli/primer_cli/io/: __init__.py  alignment.py  cache.py  fasta.py  reports.py
app/primer_cli/primer_cli/services/aligners/: __init__.py  mafft.py
app/primer_cli/primer_cli/services/conserved/: __init__.py  finder.py  metrics.py
app/primer_cli/primer_cli/services/ncbi/: client.py  filter.py  parsers.py
app/primer_cli/primer_cli/services/primers/: __init__.py  blast_specificity.py  data_prep.py  final_scoring.py  msa_coverage.py  msa_profile.py  output.py  pair_candidates.py  pair_coverage.py  single_primer_builder.py  single_primer_metrics.py  strategy_a.py  window_candidates.py
app/primer_cli/primer_cli/utils/: paths.py  subprocess.py
app/primer_cli/tests/: conftest.py
app/primer_cli/tests/integration/: test_pipeline_smoke.py
app/primer_cli/tests/unit/: test_cli.py  test_conserved.py  test_mafft.py  test_ncbi_client.py  test_pipeline_overwrite.py  test_primers.py
